[gd_scene load_steps=9 format=2]

[ext_resource path="res://Components/Explosion/explosion.png" type="Texture" id=1]
[ext_resource path="res://Components/Explosion/Explosion.gd" type="Script" id=2]
[ext_resource path="res://Components/RanPitchAudio2D.gd" type="Script" id=3]
[ext_resource path="res://SoundEffects/explosion3.wav" type="AudioStream" id=4]

[sub_resource type="Curve" id=1]
max_value = 0.5
_data = [ Vector2( 0, 0.140909 ), 0.0, 0.0, 0, 0, Vector2( 0.99877, 0.022727 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.933594, 0.127184, 0.0875244, 1, 0.796875, 0.754852, 0.124512, 1 )

[sub_resource type="Curve" id=3]
max_value = 0.5
_data = [ Vector2( 0, 0.181818 ), 0.0, 0.0, 0, 0, Vector2( 0.939252, 0.0681818 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0.191406, 0.180939, 0.180939, 1, 0.65625, 0.645996, 0.645996, 1 )

[node name="Explosion" type="Node2D"]
z_index = 3
script = ExtResource( 2 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 200
lifetime = 5.0
one_shot = true
speed_scale = 8.53
explosiveness = 0.75
randomness = 0.3
lifetime_randomness = 0.3
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 4.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 0.15
angular_velocity = 209.46
angular_velocity_random = 1.0
angle = 19.7
angle_random = 1.0
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )

[node name="Particles2D2" type="CPUParticles2D" parent="."]
emitting = false
amount = 25
lifetime = 5.0
one_shot = true
speed_scale = 5.9
explosiveness = 0.75
randomness = 0.3
lifetime_randomness = 0.3
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 4.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 0.15
angular_velocity = 209.46
angular_velocity_random = 1.0
angle = 19.7
angle_random = 1.0
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 4 )

[node name="RanPitchAudio2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
script = ExtResource( 3 )
min_pitch = 0.9
max_pitch = 1.2

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
